# telegram-expense-bot

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: bot-service.yml  connector-service.yml
bot-service/: .coveragerc  .env.example  .flake8  .lintstagedrc.json  .secrets.baseline  Dockerfile  README.md  pyproject.toml
bot-service/app/: auth.py  db.py  expense_analyzer.py  main.py  settings.py
bot-service/app/api/: router.py
bot-service/app/api/v1/: __init__.py  expenses.py  users.py
bot-service/app/api/v1/dependencies/: __init__.py
bot-service/app/models/: __init__.py  expenses.py  healthcheck.py  messages.py  users.py
bot-service/app/tests/: conftest.py  test_auth.py
bot-service/app/tests/expense_analyzer/: conftest.py  test_expense_analyzer.py
bot-service/app/tests/routes/: test_healthcheck.py
bot-service/app/tests/routes/v1/: conftest.py  test_expenses.py  test_users.py
bot-service/migrations/: env.py
bot-service/migrations/versions/: 96d2829cf9d9_initial_migration.py
connector-service/: .env.example  .lintstagedrc.json  Dockerfile  README.md  eslint.config.js  jest.config.ts  package-lock.json  package.json
connector-service/src/: app.ts  botClient.ts  config.ts  telegramBot.ts
connector-service/src/__tests__/: botClient.test.ts  config.test.ts  telegramBot.test.ts
connector-service/src/__tests__/routes/: health.test.ts
connector-service/src/middlewares/: logging.ts
connector-service/src/routes/: health.ts  index.ts
