[project]
name = "bot-service"
version = "0.1.0"
description = ""
authors = [
    {name = "SebaRossi94",email = "seba.rossi.94@gmail.com"}
]
readme = "README.md"
package-mode=false
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "alembic (>=1.16.1,<2.0.0)",
    "langchain (>=0.3.25,<0.4.0)",
    "langchain-openai (>=0.3.18,<0.4.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "aiohttp (>=3.11.18,<4.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
langchain-huggingface = "^0.2.0"
black = "^25.1.0"
flake8 = "^7.2.0"
isort = "^6.0.1"
detect-secrets = "^1.5.0"
pytest = "^8.3.5"
pytest-asyncio = "^1.0.0"
pytest-mock = "^3.14.1"

[tool.black]
line-length = 88
target-version = ["py311"]
exclude = '''
/(
  | migrations
  | .venv
)/

'''

[tool.isort]
profile = "black"
skip = [
    "migrations",
    ".venv",
]
